# Nexus

./: .gitignore  CMakeLists.txt  README.md
MinSizeRel/: glad.lib  glfw3.lib  imgui.lib  nexus.lib  tinyobj.lib
shader/: betaCharacter.frag.glsl  betaCharacter.vert.glsl  curve.frag.glsl  curve.geom.glsl  curve.vert.glsl  grid.frag.glsl  grid.vert.glsl  model.frag.glsl  model.vert.glsl  modelFlat.frag.glsl  point.vert.glsl  point3d.frag.glsl  point3d.vert.glsl  skeleton.vert.glsl
src/animation/: aParticle.cpp  aParticle.h  aParticleSystem.cpp  aParticleSystem.h
src/nexus/: Constraint.cpp  Constraint.h  Helper.cpp  Helper.h  NexusCloth.cpp  NexusCloth.h  NexusObject.cpp  NexusObject.h  NexusRigidBody.cpp  NexusRigidBody.h  PBDSolver.cpp  PBDSolver.h  Particle.cpp  Particle.h  SpatialHash.cpp  SpatialHash.h  defines.h  includes.h
src/viewer/: camera.cpp  camera.h  drawable.h  objmodel.cpp  objmodel.h  particleMain.cpp  particleViewer.cpp  particleViewer.h  shader.h  viewer.cpp  viewer.h
